add comments to data-exploration notebook

--- a/nlp-investigation.ipynb
+++ b/nlp-investigation.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from IPython.display import display\n",
     "import matplotlib.pyplot as plt\n",
     "from collections import Counter\n",
     "import re\n",
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -53,13 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "<BarContainer object of 20 artists>"
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -312,6 +313,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# removing special characters\n",
+    "# ----- Expected output -----\n",
+    "# Before: Sample text 123 !!!! Haha.... !!!! ##$$$%%%%\n",
+    "# After: Sample text 123  Haha\n",
+    "\n",
+    "def remove_special_char(text):\n",
+    "    return re.sub(r\"[^A-Za-z0-9\\s]+\", \" \", text)\n",
+    "\n",
+    "\n",
+    "df['CONTENT_EDITED_TEMP'] = df['CONTENT_EDITED'].apply(lambda x: remove_special_char(x))\n",
+    "print(len(df.loc[~(df['CONTENT_EDITED_TEMP'] == df['CONTENT_EDITED'])].index))\n",
+    "df.loc[~(df['CONTENT_EDITED_TEMP'] == df['CONTENT_EDITED'])].head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "outputs": [
     {
@@ -390,7 +428,7 @@
    "source": [
     "# removing possessive and verb s\n",
     "def remove_possessive(text):\n",
-    "    return text.replace(\"'s\", '')\n",
+    "    return text.replace(\"'s\", ' ')\n",
     "\n",
     "\n",
     "df['CONTENT_EDITED_TEMP'] = df['CONTENT_EDITED'].apply(lambda x: remove_possessive(x))\n",
@@ -439,20 +477,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# removing special characters\n",
-    "# ----- Expected output -----\n",
-    "# Before: Sample text 123 !!!! Haha.... !!!! ##$$$%%%%\n",
-    "# After: Sample text 123  Haha\n",
-    "\n",
-    "def remove_special_char(text):\n",
-    "    return re.sub(r\"[^A-Za-z0-9\\s]+\", \"\", text)\n",
-    "\n",
-    "\n",
-    "df['CONTENT_EDITED_TEMP'] = df['CONTENT_EDITED'].apply(lambda x: remove_special_char(x))\n",
-    "print(len(df.loc[~(df['CONTENT_EDITED_TEMP'] == df['CONTENT_EDITED'])].index))\n",
-    "df.loc[~(df['CONTENT_EDITED_TEMP'] == df['CONTENT_EDITED'])].head()"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -771,10 +796,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "outputs": [],
    "source": [
-    "df.to_parquet(path='dataset/youtube-agg-nlp-v1.parquet', engine='pyarrow')"
+    "#df.to_parquet(path='dataset/youtube-agg-nlp-v1.parquet', engine='pyarrow')\n",
+    "df = pd.read_parquet(path='dataset/youtube-agg-nlp-v1.parquet', engine='pyarrow')"
    ],
    "metadata": {
     "collapsed": false,
