implement LogisticRegression and ExtraTreesClassifier

--- a/nlp-investigation.ipynb
+++ b/nlp-investigation.ipynb
@@ -12,7 +12,7 @@
     "import re\n",
     "import spacy\n",
     "from tqdm import tqdm\n",
-    "from emot.emo_unicode import UNICODE_EMOJI_ALIAS, EMOTICONS_EMO\n"
+    "from emot.emo_unicode import UNICODE_EMOJI_ALIAS, EMOTICONS_EMO"
    ],
    "metadata": {
     "collapsed": false,
@@ -387,6 +387,7 @@
     }
    ],
    "source": [
+    "# replace emoji with their meaning\n",
     "emoticons = {k: v.replace(\":\", \"\").replace(\"_\", \" \").replace(\",\", \"\").strip() for k, v in\n",
     "             EMOTICONS_EMO.items()}\n",
     "unicode_emoji = {k: v.replace(\":\", \"\").replace(\"_\", \" \").replace(\",\", \"\").strip() for k, v in\n",
@@ -663,8 +664,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1630it [00:02, 754.26it/s]\n",
-      "100%|██████████| 1630/1630 [00:00<00:00, 3569.00it/s]\n"
+      "1630it [00:02, 763.14it/s]\n",
+      "100%|██████████| 1630/1630 [00:00<00:00, 3730.64it/s]\n"
      ]
     }
    ],
@@ -827,11 +828,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1792it [00:00, 3546.37it/s]\n"
+      "1792it [00:00, 3542.14it/s]\n"
      ]
     }
    ],
    "source": [
+    "# try to find the probability of author being spam writer\n",
     "res = df[df['CLASS'] == 1].groupby('AUTHOR').size() / df.groupby('AUTHOR').size()\n",
     "res = res.fillna(0)\n",
     "for inx, item in tqdm(res.iteritems()):\n",
@@ -849,21 +851,8 @@
    "execution_count": 23,
    "outputs": [],
    "source": [
-    "df.to_parquet(path='dataset/youtube-agg-nlp-v1.parquet', engine='pyarrow')\n",
-    "#df = pd.read_parquet(path='dataset/youtube-agg-nlp-v1.parquet', engine='pyarrow')"
+    "df.to_parquet(path='dataset/youtube-agg-nlp-v1.parquet', engine='pyarrow')"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
